--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.7.4",
     "@types/qs": "^6.9.16",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
