--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "typeCheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@sentry/vite-plugin": "^2.22.5",
