Refactor Tailwind and DaisyUI configuration; update component styles for consistency

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/pako": "^2.0.3",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
-    "daisyui": "^4.12.11",
     "date-fns": "^4.1.0",
     "pako": "^2.1.0",
     "pinia": "^2.2.4",
@@ -43,6 +42,8 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/jest": "^29.5.13",
     "@types/markdown-it": "^14.1.2",
     "@types/mocha": "^10.0.8",
@@ -52,11 +53,11 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
-    "autoprefixer": "^10.4.20",
+    "daisyui": "^5.0.9",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "sass": "^1.79.4",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^4.0.15",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
