fix: change trigger from push to pull_request for deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,11 @@
 name: Deploy Version API
 
 on:
-  push:
-    branches: [master]
+  pull_request:
+    branches:
+      - master
+    types:
+      - closed
 
 jobs:
   deploy:
