--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "jest",
-    "typeCheck": "vue-tsc --noEmit"
+    "typeCheck": "vue-tsc --noEmit",
+    "lint": "eslint src/",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -48,11 +50,15 @@
     "@types/qs": "^6.9.16",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-typescript": "^14.7.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
     "autoprefixer": "^10.4.20",
+    "eslint": "^10.0.2",
+    "eslint-plugin-vue": "^10.8.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.8.1",
     "sass": "^1.79.4",
     "tailwindcss": "^3.4.13",
     "ts-jest": "^29.2.5",
